...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.NavigatorRoutesFragment">
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayout">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icon_car"
...
            android:text="---" />

    </com.google.android.material.tabs.TabLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRoutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabLayout"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
...
